--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id="head">Choose your mobile Want to buy and check the full details of the Mobiles</h1>
         <h1 id="head2">Reviews By Prasadh tech in telugu  youtube Channel</h1>
         <a href="https://www.youtube.com/@Prasadtechintelugu"><img src="images\PTT.jpg" alt="Prasad tech In telugu"></a><br><br>
-        <button id="Subscribe" type="button" onclick="">Subscribe</button> <br> <br></center>
+        <button id="Subscribe" type="button" onclick="click()">Subscribe</button> <br> <br></center>
         </div>
         <div class="neo7pro">
             <img src="images\iqooneo7pro.jpeg" alt="iqooneo7pro" id="neo7pro">
