--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1 id="head2">Reviews By Prasadh tech in telugu  youtube Channel</h1>
         <a href="https://www.youtube.com/@Prasadtechintelugu"><img src="images\PTT.jpg" alt="Prasad tech In telugu"></a><br><br>
         <button id="Subscribe" type="button" onclick="click()">Subscribe</button> <br> <br></center>
+            <a href="index2.html>Click</a>
         </div>
         <div class="neo7pro">
             <img src="images\iqooneo7pro.jpeg" alt="iqooneo7pro" id="neo7pro">
