--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <center> <p id="review">For Full review Watch This Video</p> <iframe width="560" height="315" src="https://www.youtube.com/embed/wk8PlfCeku4" title="YouTube video player" frameborder="0"  allowfullscreen></iframe>
       </center>
     </div>
-        <a href="index2.html">NextPage</a>
+        <a href="index2.html" id="link">NextPage</a>
     </div>
     <script src="script.js"></script>
 </body>
