--- a/index.html
+++ b/index.html
@@ -216,6 +216,6 @@
        
     </div>
     <script src="script.js"></script>
-     <a href="index2.html" id="link">NextPage</a>
+    <button oncilck="btn()">Nextpage</button>
 </body>
 </html>
