--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
         
         <button type="button" onclick="razr40ultra()" >BUY NOW</button>
       <center> <p id="review">For Full review Watch This Video</p> <iframe width="560" height="315" src="https://www.youtube.com/embed/wk8PlfCeku4" title="YouTube video player" frameborder="0"  allowfullscreen></iframe>
-      </center>
+      </center><br><br><br>
     </div>
        
     </div>
     <script src="script.js"></script>
-    <button oncilck="btn()">Nextpage</button>
+    <a href="index2.html style={"font-size:xx-larger;color:red"}>Next page</a>
 </body>
 </html>
