--- a/index.html
+++ b/index.html
@@ -215,6 +215,6 @@
        
     </div>
     <script src="script.js"></script>
-    <a href="index2.html style={"font-size:xx-larger;color:red"}>Next page</a>
+<center>    <a href="index2.html" style="font-size:xx-larger;color:red">Next page</a></center>
 </body>
 </html>
