--- a/index.html
+++ b/index.html
@@ -215,6 +215,6 @@
        
     </div>
     <script src="script.js"></script>
-<center>    <a href="index2.html" style="font-size:xx-larger;color:red">Next page</a></center>
+<center>    <a href="index2.html">Next page</a></center>
 </body>
 </html>
